gitops/jenkins/2/4_service_and_route.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins-test
  labels:
    app: jenkins
spec:
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: jnlp
      port: 50000
      targetPort: 50000
  selector:
    app: jenkins
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins
  namespace: jenkins-test
spec:
  to:
    kind: Service
    name: jenkins
  port:
    targetPort: web
  tls:
    termination: edge
